Include email, phone, website and fax in the table

--- a/app/templates/components/functionaris-table.hbs
+++ b/app/templates/components/functionaris-table.hbs
@@ -17,6 +17,10 @@
       {{th-sortable label="Status" field="status.label" currentSorting=sort}}
       {{th-sortable label="Contactgegevens" field="bekleedt.contactinfo.email" currentSorting=sort}}
       {{th-sortable label="Adres" field="bekleedt.contactinfo.adres" currentSorting=sort}}
+      {{th-sortable label="Email" field="bekleedt.contactinfo.email" currentSorting=sort}}
+      {{th-sortable label="Telephone" field="bekleedt.contactinfo.telephone" currentSorting=sort}}
+      {{th-sortable label="Website" field="bekleedt.contactinfo.website" currentSorting=sort}}
+      {{th-sortable label="Fax" field="bekleedt.contactinfo.fax" currentSorting=sort}}
     {{/c.header}}
 
     {{#if (eq content.length 0)}}
@@ -37,6 +41,34 @@
         <td class="u-hidden-mobile word-break--break-word">
           {{#if row.bekleedt.contactinfo.adres}}
             {{row.bekleedt.contactinfo.adres}}
+          {{else}}
+            <span class="text-fade">Onbepaald</span>
+          {{/if}}
+        </td>
+        <td class="u-hidden-mobile word-break--break-word">
+          {{#if row.bekleedt.contactinfo.email}}
+            {{row.bekleedt.contactinfo.email}}
+          {{else}}
+            <span class="text-fade">Onbepaald</span>
+          {{/if}}
+        </td>
+        <td class="u-hidden-mobile word-break--break-word">
+          {{#if row.bekleedt.contactinfo.telephone}}
+            {{row.bekleedt.contactinfo.telephone}}
+          {{else}}
+            <span class="text-fade">Onbepaald</span>
+          {{/if}}
+        </td>
+        <td class="u-hidden-mobile word-break--break-word">
+          {{#if row.bekleedt.contactinfo.website}}
+            {{row.bekleedt.contactinfo.website}}
+          {{else}}
+            <span class="text-fade">Onbepaald</span>
+          {{/if}}
+        </td>
+        <td class="u-hidden-mobile word-break--break-word">
+          {{#if row.bekleedt.contactinfo.fax}}
+            {{row.bekleedt.contactinfo.fax}}
           {{else}}
             <span class="text-fade">Onbepaald</span>
           {{/if}}
