--- a/app/templates/components/functionaris-table.hbs
+++ b/app/templates/components/functionaris-table.hbs
@@ -23,7 +23,12 @@
       {{yield}}
     {{else}}
       {{#c.body as |row|}}
-        <td>{{row.bekleedt.rol.label}}</td>
+        {{!-- <td>{{row.bekleedt.rol.label}}</td> --}}
+        {{#with-rdfa-context tagName="td" model=row as |ctx|}}
+          {{debugger}}
+          {{ctx.get prop="einde"}}
+        {{/with-rdfa-context}}
+
         <td>{{row.isBestuurlijkeAliasVan.gebruikteVoornaam}}</td>
         <td>{{row.isBestuurlijkeAliasVan.achternaam}}</td>
         <td>{{row.status.label}}</td>
