remove leftover design

--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -12,10 +12,7 @@
   </div>
 
   <div class="u-padding--tb" id="main">
-
-    <div typeof="http://data.vlaanderen.be/ns/besluit#Bestuursorgaan" resource="http://data.lblod.info/id/bestuursorganen/521b3f49b206a4c1269cd754cb8159f0e121e5fe6d333431ecdd78e183f71226">
-      <h1 class="h2 text-light u-spacer--bottom--tiny">Leidinggevenden van de <span property="http://www.w3.org/2004/02/skos/core#prefLabel">{{bestuurseenheid.naam}}</span></h1>
-    </div>
+    <h1 class="h2 text-light u-spacer--bottom--tiny">Leidinggevenden van de {{bestuurseenheid.naam}}</h1>
   </div>
 </div>
 
