--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -16,6 +16,9 @@
   </div>
 </div>
 
+<!-- TODO: To make the RDFA annotations independent for a crawler. IT would best to include in RDFA annotation
+     1. Bestuurseenheid -> bestuursorgaan -> bestuursorgaan  in tijd -> bestuursfuncties-->
+
 <div class="u-padding--rl--small u-spacer--tb">
   <div class="container-flex--scroll">
     {{#functionaris-table
