Fix a typo: fx -> fax

--- a/app/templates/components/functionaris-table.hbs
+++ b/app/templates/components/functionaris-table.hbs
@@ -73,7 +73,7 @@
                 telephone: {{{if telephone telephone onbepaald}}}
               {{/contactinfo.get}}
               {{#contactinfo.get prop="fax" as |fax|}}
-                fax: {{{if fax fx onbepaald}}}
+                fax: {{{if fax fax onbepaald}}}
               {{/contactinfo.get}}
             {{/bekleedt.get}}
           {{/functionaris.get}}
