--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -12,7 +12,12 @@
   </div>
 
   <div class="u-padding--tb" id="main">
-    <h1 class="h2 text-light u-spacer--bottom--tiny">Leidinggevenden van de {{bestuurseenheid.naam}}</h1>
+      <h1 class="h2 text-light u-spacer--bottom--tiny">
+        Leidinggevenden van de
+        {{#with-rdfa-context tagName="span" model=bestuurseenheid as |ctx|}}
+          <span property={{bestuurseenheid.rdfaBindings.naam}}>{{bestuurseenheid.naam}}</span>
+        {{/with-rdfa-context}}
+      </h1>
   </div>
 </div>
 
