--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -13,7 +13,7 @@
 
   <div class="u-padding--tb" id="main">
       <h1 class="h2 text-light u-spacer--bottom--tiny">
-        Leidinggevenden van de
+        Leidinggevenden van
         {{#with-rdfa-context tagName="span" model=bestuurseenheid as |ctx|}}
           <span property={{bestuurseenheid.rdfaBindings.naam}}>{{bestuurseenheid.naam}}</span>
         {{/with-rdfa-context}}
