Move date based filtering logic to the controller
This will make the filtered data also available to FastBoot. FastBoot won't wait until the setupController is done.

--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -28,7 +28,7 @@
   <div class="container-flex--scroll">
     {{#functionaris-table
       class="container-flex--contain"
-      content=model
+      content=filteredModel
       sort=sort
       page=page
       size=size
