--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -22,7 +22,7 @@
 </div>
 
 <div class="u-padding--rl--small u-spacer--tb">
-  <div class="container-flex--scroll" typeof="{{bestuurseenheid.rdfaBindings.class}}">
+  <div class="container-flex--scroll">
     {{#functionaris-table
       class="container-flex--contain"
       content=filteredModel
