Replace {{link-to}} with a plain <a>

--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -2,10 +2,8 @@
   <div class="u-padding--top--tiny">
     <div class="grid">
       <div class="col--6-12">
-        <a class="link--icon">
-          {{#link-to "index"}}
-            <small><i  class="vi-arrow vi-u-180deg vi"></i> Terug naar zoeken</small>
-          {{/link-to}}
+        <a class="link--icon" href="/?bestuurseenheidId={{bestuurseenheid.id}}">
+          <small><i  class="vi-arrow vi-u-180deg vi"></i> Terug naar zoeken</small>
         </a>
       </div>
     </div>
