--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -16,10 +16,11 @@
         }}
       </div>
     </div>
-    {{#link-to "bestuurseenheid.functionarissen" bestuurseenheid.id class="button button--narrow button--large"}}
-      <i class="vi vi-arrow"></i>
-      Bekijk leidinggevenden van bestuurseenheid
-    {{/link-to}}
+    {{wu-button
+      label="Bekijk leidinggevenden van bestuurseenheid"
+      onClick=(action "displayLeidinggevenden")
+      size="large"
+    }}
 
     <div class="u-hr u-hr--label u-hr--label--centered u-spacer--tb--large"><span>of</span></div>
 
