--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -20,6 +20,7 @@
       label="Bekijk leidinggevenden van bestuurseenheid"
       onClick=(action "displayLeidinggevenden")
       size="large"
+      disabled=(not bestuurseenheid)
     }}
 
     <div class="u-hr u-hr--label u-hr--label--centered u-spacer--tb--large"><span>of</span></div>
