--- a/app/templates/components/functionaris-table.hbs
+++ b/app/templates/components/functionaris-table.hbs
@@ -20,7 +20,13 @@
     {{/c.header}}
 
     {{#if (eq content.length 0)}}
-      {{yield}}
+      <tbody>
+        <tr>
+          <td class="u-align-center u-padding--round--small" colspan="6">
+            <p class="u-spacer--tiny">Geen functionaris gevonden.</p>
+          </td>
+        </tr>
+      </tbody>
     {{else}}
       {{#c.body as |row|}}
         <td>
