Pass page and size to data-table component

--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -28,9 +28,11 @@
 <div class="u-padding--rl--small u-spacer--tb">
   <div class="container-flex--scroll">
     {{functionaris-table
-      class="container-flex--contain"
-      content=filteredModel
-      sort=sort
+        class="container-flex--contain"
+        content=filteredModel
+        page=page
+        size=size
+        sort=sort
     }}
   </div>
 </div>
