--- a/app/templates/legaal/disclaimer.hbs
+++ b/app/templates/legaal/disclaimer.hbs
@@ -29,7 +29,7 @@
       <p>We verzamelen en verwerken uw persoonsgegevens bij het uitvoeren van onze taken of als u contact met ons opneemt in het kader van deze uitvoering. We kunnen uw persoonsgegevens ook verwerken als u een algemene vraag aan ons stelt.</p>
 
       <h3 class="h3">Waarvoor verwerken we uw persoonsgegevens?</h3>
-      <p>Van mandatarissen van een lokaal bestuur hebben we de decretale taak om deze gegevens bij te houden in een databank.</p>
+      <p>Van leidinggevenden van een lokaal bestuur hebben we de decretale taak om deze gegevens bij te houden in een databank.</p>
       <p>We verwerken uw persoonsgegevens ook wanneer u het contactformulier invult.</p>
       <p>Meer informatie over onze dienstverlening en ons takenpakket vindt u op onze website: <a rhef="https://www.binnenland.vlaanderen.be" target="_blank">https://www.binnenland.vlaanderen.be</a>.</p>
 
@@ -57,9 +57,9 @@
             <td><p class="uppercase text-fade">Identificatie contactgegevens</p></td>
           </tr>
           <tr>
-            <td>Mandatendatabank</td>
-            <td><a href="https://codex.vlaanderen.be/PrintDocument.ashx?id=1022713" target="_blank">Besluit van de Vlaamse Regering  van 18 januari 2013 tot nadere uitvoering van de mandatendatabank, vermeld in artikel 74bis en 274, § 5, van het Gemeentedecreet, artikel 72bis van het Provinciedecreet van 9 december 2005 en artikel 73/1 van het decreet van 19 december 2008 betreffende de organisatie van de openbare centra voor maatschappelijk welzijn.</a></td>
-            <td>De databank bevat de voornaam, de achternaam, het geslacht, de geboortedatum, het rijksregisternummer, de naam van de lijst waarop de mandataris als gemeenteraadslid is verkozen, de naam van de fractie waartoe hij behoort of, in voorkomend geval, de melding dat hij als onafhankelijke zetelt, alsook, in voorkomend geval de bevoegdheden die hij toegewezen krijgt, en de begin- en einddatum van zijn mandaat. De gegevens worden bijgehouden van volgende mandatarissen: gemeenteraadslid, (waarnemend) burgemeester, schepen, voorzitter van de gemeenteraad, districtsraadslid, lid van het districtscollege, voorzitter van de districtsraad, voorzitter van het districtscollege   provincieraadslid, gedeputeerde, voorzitter van de provincieraad, OCMW-raadslid, lid van het vast bureau, ondervoorzitter van de OCMW-raad en voorzitter van de OCMW-raad</td>
+            <td>Leidinggevendendatabank</td>
+            <td><a href="https://codex.vlaanderen.be/PrintDocument.ashx?id=1022713" target="_blank">Besluit van de Vlaamse Regering  van 18 januari 2013 tot nadere uitvoering van de leidinggevendendatabank, vermeld in artikel 74bis en 274, § 5, van het Gemeentedecreet, artikel 72bis van het Provinciedecreet van 9 december 2005 en artikel 73/1 van het decreet van 19 december 2008 betreffende de organisatie van de openbare centra voor maatschappelijk welzijn.</a></td>
+            <td>De databank bevat de voornaam, de achternaam, het geslacht, de geboortedatum, het rijksregisternummer, en de begin- en einddatum van zijn leidinggevend. De gegevens worden bijgehouden van volgende leidinggevenden: {{!-- We need the list here --}}</td>
           </tr>
         </tbody>
       </table>
@@ -70,35 +70,37 @@
     <div class="content u-spacer typography">
       <h3 class="h3">Hoe verzamelen en verwerken we uw persoonsgegevens?</h3>
       <p>We vragen uw persoonsgegevens rechtstreeks bij u op wanneer u het contactformulier invult.</p>
-      <p>De gegevens van de mandatarissen van een lokaal bestuur worden ingegeven in de mandatendatabank door een medewerker van het lokaal bestuur dat daarvoor gemachtigd is door de algemeen directeur van het lokaal bestuur.</p>
+      <p>De gegevens van de leidinggevenden van een lokaal bestuur worden ingegeven in de leidinggevendendatabank door een medewerker van het lokaal bestuur dat daarvoor gemachtigd is door de algemeen directeur van het lokaal bestuur.</p>
       <p>We leven daarbij altijd de bepalingen na over de bescherming van natuurlijke personen bij de verwerking van persoonsgegevens, die in voorkomend geval op federaal of Vlaams niveau vastgelegd zijn.</p>
+      {{!-- Somebody should confirm the above information --}}
 
       <h3 class="h3">Wat zijn de grondslagen voor de verwerking van uw persoonsgegevens?</h3>
       <p>We verwerken uw persoonsgegevens voor onze taken van algemeen belang die zijn opgenomen in het <a href="https://codex.vlaanderen.be/Zoeken/Document.aspx?DID=1014349&amp;param=inhoud" target="_blank">Besluit van de Vlaamse Regering van 28 oktober 2005 tot oprichting van het intern verzelfstandigd agentschap</a>.</p>
-      <p>Specifiek voor de gegevens van mandatarissen verwerken we de gegevens zoals opgenomen in Besluit van de Vlaamse Regering van 18 januari 2013 tot nadere uitvoering van de mandatendatabank, vermeld in artikel 74bis en 274, § 5, van het Gemeentedecreet, artikel 72bis van het Provinciedecreet van 9 december 2005 en artikel 73/1 van het decreet van 19 december 2008 betreffende de organisatie van de openbare centra voor maatschappelijk welzijn.</p>
+      <p>Specifiek voor de gegevens van leidinggevenden verwerken we de gegevens zoals opgenomen in Besluit van de Vlaamse Regering {{!-- van 18 januari 2013 --}} tot nadere uitvoering van de leidinggevendendatabank, vermeld in artikel {{!-- 74bis en 274, § 5, van het Gemeentedecreet, artikel 72bis van het Provinciedecreet van 9 december 2005 en artikel 73/1 van het decreet van 19 december 2008 betreffende de organisatie van de openbare centra voor maatschappelijk welzijn. --}}</p>
       <p>We baseren de verwerking van uw persoonsgegevens in het kader van het  behandelen van contactformulieren op uw toestemming.</p>
 
       <h3 class="h3">Hoelang bewaren we uw persoonsgegevens?</h3>
       <p>Volgens de algemene regel mogen we uw persoonsgegevens alleen bewaren tijdens de periode waarin ze noodzakelijk zijn om bepaalde diensten te verlenen. We bewaren uw gegevens dus zolang u gebruikmaakt van onze diensten. Daarna bewaren we uw gegevens nog gedurende de termijn waarin we ons moeten kunnen verantwoorden voor de verleende diensten. Na verloop van die verjaringstermijn worden de gegevens verwijderd, tenzij ze van historisch, cultureel of algemeen belang zijn.</p>
-      <p>De gegevens van de mandatarissen worden omwille van het historisch belang van de invulling van publieke mandaten in principe voor altijd bewaard.</p>
+      {{!-- Somebody should confirm the following information --}}
+      <p>De gegevens van de leidinggevenden worden omwille van het historisch belang van de invulling van publieke leidinggevenden in principe voor altijd bewaard.</p>
 
       <h3 class="h3">Delen we uw persoonsgegevens mee aan anderen?</h3>
-      <p>Uw gegevens worden in principe intern verwerkt door onze medewerkers. Het is mogelijk dat we voor bepaalde specifieke diensten een beroep doen op derden, die uw gegevens verwerken. We bezorgen uw gegevens aan die verwerkers, zodat ze de dienst in kwestie kunnen verlenen. We oefenen daar op elk moment controle over uit. Voor de mandatendatabank maken we gebruik van een Europese cloudserviceprovider. Wij verkopen uw gegevens niet aan derden.</p>
-      <p>De gegevens van de mandatarissen zijn publiek toegankelijk tot aan de algehele vernieuwing van de gemeenteraad, met uitzondering van de geboortedatum en het rijksregisternummer van de betrokken mandataris.</p>
+      <p>Uw gegevens worden in principe intern verwerkt door onze medewerkers. Het is mogelijk dat we voor bepaalde specifieke diensten een beroep doen op derden, die uw gegevens verwerken. We bezorgen uw gegevens aan die verwerkers, zodat ze de dienst in kwestie kunnen verlenen. We oefenen daar op elk moment controle over uit. Voor de leidinggevendendatabank maken we gebruik van een Europese cloudserviceprovider. Wij verkopen uw gegevens niet aan derden.</p>
+      <p>De gegevens van de leidinggevenden zijn publiek toegankelijk tot aan de algehele vernieuwing van de gemeenteraad, met uitzondering van de geboortedatum en het rijksregisternummer van de betrokken leidinggevende.</p>
 
       <h3 class="h3">Worden uw persoonsgegevens doorgegeven buiten de Europese Unie?</h3>
       <p>In principe geven we uw gegevens niet door aan landen buiten de Europese Unie of internationale organisaties. Dat zijn landen of organisaties die gevestigd zijn buiten het grondgebied van de Europese Economische Ruimte (Europese Unie + IJsland, Noorwegen en Liechtenstein).</p>
 
       <h3 class="h3">Wat zijn uw rechten?</h3>
       <p>Als we uw persoonsgegevens verwerken in het kader van het algemeen belang, kunt u zich op elk moment verzetten tegen de verwerking van uw gegevens. We wegen dan af of uw individuele belangen zwaarder doorwegen dan het algemeen belang dat we nastreven met de verwerking. Als we uw gegevens niet langer mogen of kunnen verwerken, is het ook niet mogelijk om u de dienst of het voordeel waar u aanspraak op maakt, te verlenen.</p>
-      <p>Als uw gegevens als mandataris niet correct vermeld staan in de mandatendatabank kunt u hiervoor contact opnemen met de algemeen directeur van het lokaal bestuur waar u mandataris bent. Zij kunnen de gegevens aanpassen.</p>
+      <p>Als uw gegevens als leidinggevende niet correct vermeld staan in de leidinggevendendatabank kunt u hiervoor contact opnemen met de algemeen directeur van het lokaal bestuur waar u leidinggevende bent. Zij kunnen de gegevens aanpassen.</p>
       <p>Voor de verwerkingen van persoonsgegevens waarvoor u uw toestemming gegeven heeft, geldt dat u deze toestemming te allen tijde opnieuw kan intrekken. Deze intrekking doet echter geen afbreuk aan de verwerkingen die voorheen plaatsvonden op basis van de door u gegeven toestemming.</p>
       <p>U kunt ook terecht bij die dienst als u vindt dat uw gegevens niet langer relevant zijn en dus verwijderd moeten worden.</p>
       <p>Als u het niet eens bent met de manier waarop we uw gegevens verwerken, kunt u contact opnemen met onze Functionaris voor Gegevensbescherming via abb.veiligheid@kb.vlaanderen.be. Daarnaast kunt u een klacht indienen bij de bevoegde toezichthoudende autoriteit.</p>
 
       <h3 class="h3">Hoe worden uw persoonsgegevens beveiligd?</h3>
       <p>We zorgen ervoor dat de persoonsgegevens goed beveiligd, bewaard en getransporteerd worden, en enkel ingekeken kunnen worden door de medewerkers die ze nodig hebben.</p>
-      <p>Voor de mandatendatabank kunnen enkel personen die hiervoor gemachtigd werden volledige toegang krijgen tot de gegevens. Hiervoor wordt gebruik gemaakt van het gebruikers- en toegangsbeheer van de Vlaamse overheid.</p>
+      <p>Voor de leidinggevendendatabank kunnen enkel personen die hiervoor gemachtigd werden volledige toegang krijgen tot de gegevens. Hiervoor wordt gebruik gemaakt van het gebruikers- en toegangsbeheer van de Vlaamse overheid.</p>
 
       <h3 class="h3">Algemene informatie</h3>
       <p>We hebben het recht om het beleid te wijzigen en aan te passen. Wijzigingen en aanpassingen melden we altijd via de website. Meer informatie over de manier waarop we online met persoonsgegevens omgaan, kunt u vinden op onze <a href="https://binnenland.vlaanderen.be/privacyverklaring-abb" target="_blank">algemene online privacy verklaring.</a></p>
