Adopt contact page's title

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,4 +1,4 @@
-{{wu-content-header tagline="Mandatendatabank"}}
+{{wu-content-header tagline="Leidinggevendendatabank"}}
 <div class="layout layout--wide">
   <h1 class="h1">Contact</h1>
   <form class="u-spacer--large js-formvalidation-bound">
