--- a/app/templates/legaal/disclaimer.hbs
+++ b/app/templates/legaal/disclaimer.hbs
@@ -14,7 +14,9 @@
 
       <h2 class="h2">Bescherming van persoonsgegegevens</h2>
       <p>Het Agentschap Binnenlands bestuur respecteert uw rechten bij de verwerking van uw persoonsgegevens. In deze verklaring vindt u hoe we uw persoonsgegevens verzamelen, verwerken en gebruiken. Deze privacyverklaring geeft het algemene beleid aan op het vlak van gegevensverwerking en gegevensbescherming van:</p>
-      <p><strong>Het Agentschap Binnenlands Bestuur</strong><br>
+      <p>
+        <strong>Het Agentschap Binnenlands Bestuur</strong>
+        <br>
         Herman Teirlinckgebouw<br>
         Havenlaan 88<br>
         1000 Brussel<br>
@@ -31,7 +33,7 @@
       <h3 class="h3">Waarvoor verwerken we uw persoonsgegevens?</h3>
       <p>Van leidinggevenden van een lokaal bestuur hebben we de decretale taak om deze gegevens bij te houden in een databank.</p>
       <p>We verwerken uw persoonsgegevens ook wanneer u het contactformulier invult.</p>
-      <p>Meer informatie over onze dienstverlening en ons takenpakket vindt u op onze website: <a rhef="https://www.binnenland.vlaanderen.be" target="_blank">https://www.binnenland.vlaanderen.be</a>.</p>
+      <p>Meer informatie over onze dienstverlening en ons takenpakket vindt u op onze website: <a rhef="https://www.binnenland.vlaanderen.be" target="_blank" rel="noopener">https://www.binnenland.vlaanderen.be</a>.</p>
 
       <h3 class="h3">Welke gegevens verwerken we over u?</h3>
       <p>We verwerken uw persoonsgegevens. Dat zijn de gegevens die u identificeren of die een band leggen met u als natuurlijke persoon.</p>
@@ -58,7 +60,7 @@
           </tr>
           <tr>
             <td>Leidinggevendendatabank</td>
-            <td><a href="https://codex.vlaanderen.be/PrintDocument.ashx?id=1022713" target="_blank">Besluit van de Vlaamse Regering  van 18 januari 2013 tot nadere uitvoering van de leidinggevendendatabank, vermeld in artikel 74bis en 274, § 5, van het Gemeentedecreet, artikel 72bis van het Provinciedecreet van 9 december 2005 en artikel 73/1 van het decreet van 19 december 2008 betreffende de organisatie van de openbare centra voor maatschappelijk welzijn.</a></td>
+            <td><a href="https://codex.vlaanderen.be/PrintDocument.ashx?id=1022713" target="_blank" rel="noopener">Besluit van de Vlaamse Regering  van 18 januari 2013 tot nadere uitvoering van de leidinggevendendatabank, vermeld in artikel 74bis en 274, § 5, van het Gemeentedecreet, artikel 72bis van het Provinciedecreet van 9 december 2005 en artikel 73/1 van het decreet van 19 december 2008 betreffende de organisatie van de openbare centra voor maatschappelijk welzijn.</a></td>
             <td>De databank bevat de voornaam, de achternaam, het geslacht, de geboortedatum, het rijksregisternummer, en de begin- en einddatum van zijn leidinggevend. De gegevens worden bijgehouden van volgende leidinggevenden: {{!-- We need the list here --}}</td>
           </tr>
         </tbody>
@@ -72,16 +74,14 @@
       <p>We vragen uw persoonsgegevens rechtstreeks bij u op wanneer u het contactformulier invult.</p>
       <p>De gegevens van de leidinggevenden van een lokaal bestuur worden ingegeven in de leidinggevendendatabank door een medewerker van het lokaal bestuur dat daarvoor gemachtigd is door de algemeen directeur van het lokaal bestuur.</p>
       <p>We leven daarbij altijd de bepalingen na over de bescherming van natuurlijke personen bij de verwerking van persoonsgegevens, die in voorkomend geval op federaal of Vlaams niveau vastgelegd zijn.</p>
-      {{!-- Somebody should confirm the above information --}}
 
       <h3 class="h3">Wat zijn de grondslagen voor de verwerking van uw persoonsgegevens?</h3>
-      <p>We verwerken uw persoonsgegevens voor onze taken van algemeen belang die zijn opgenomen in het <a href="https://codex.vlaanderen.be/Zoeken/Document.aspx?DID=1014349&amp;param=inhoud" target="_blank">Besluit van de Vlaamse Regering van 28 oktober 2005 tot oprichting van het intern verzelfstandigd agentschap</a>.</p>
+      <p>We verwerken uw persoonsgegevens voor onze taken van algemeen belang die zijn opgenomen in het <a href="https://codex.vlaanderen.be/Zoeken/Document.aspx?DID=1014349&amp;param=inhoud" target="_blank" rel="noopener">Besluit van de Vlaamse Regering van 28 oktober 2005 tot oprichting van het intern verzelfstandigd agentschap</a>.</p>
       <p>Specifiek voor de gegevens van leidinggevenden verwerken we de gegevens zoals opgenomen in Besluit van de Vlaamse Regering {{!-- van 18 januari 2013 --}} tot nadere uitvoering van de leidinggevendendatabank, vermeld in artikel {{!-- 74bis en 274, § 5, van het Gemeentedecreet, artikel 72bis van het Provinciedecreet van 9 december 2005 en artikel 73/1 van het decreet van 19 december 2008 betreffende de organisatie van de openbare centra voor maatschappelijk welzijn. --}}</p>
       <p>We baseren de verwerking van uw persoonsgegevens in het kader van het  behandelen van contactformulieren op uw toestemming.</p>
 
       <h3 class="h3">Hoelang bewaren we uw persoonsgegevens?</h3>
       <p>Volgens de algemene regel mogen we uw persoonsgegevens alleen bewaren tijdens de periode waarin ze noodzakelijk zijn om bepaalde diensten te verlenen. We bewaren uw gegevens dus zolang u gebruikmaakt van onze diensten. Daarna bewaren we uw gegevens nog gedurende de termijn waarin we ons moeten kunnen verantwoorden voor de verleende diensten. Na verloop van die verjaringstermijn worden de gegevens verwijderd, tenzij ze van historisch, cultureel of algemeen belang zijn.</p>
-      {{!-- Somebody should confirm the following information --}}
       <p>De gegevens van de leidinggevenden worden omwille van het historisch belang van de invulling van publieke leidinggevenden in principe voor altijd bewaard.</p>
 
       <h3 class="h3">Delen we uw persoonsgegevens mee aan anderen?</h3>
@@ -103,7 +103,7 @@
       <p>Voor de leidinggevendendatabank kunnen enkel personen die hiervoor gemachtigd werden volledige toegang krijgen tot de gegevens. Hiervoor wordt gebruik gemaakt van het gebruikers- en toegangsbeheer van de Vlaamse overheid.</p>
 
       <h3 class="h3">Algemene informatie</h3>
-      <p>We hebben het recht om het beleid te wijzigen en aan te passen. Wijzigingen en aanpassingen melden we altijd via de website. Meer informatie over de manier waarop we online met persoonsgegevens omgaan, kunt u vinden op onze <a href="https://binnenland.vlaanderen.be/privacyverklaring-abb" target="_blank">algemene online privacy verklaring.</a></p>
+      <p>We hebben het recht om het beleid te wijzigen en aan te passen. Wijzigingen en aanpassingen melden we altijd via de website. Meer informatie over de manier waarop we online met persoonsgegevens omgaan, kunt u vinden op onze <a href="https://binnenland.vlaanderen.be/privacyverklaring-abb" target="_blank" rel="noopener">algemene online privacy verklaring.</a></p>
     </div>
   </div>
 </div>
